# PDA-backend

./: .coveragerc  .gitignore  README.md  Untitled-1.sh  Untitled-2  alpes.postman_collection.json  bookie-claim0-persistentvolumeclaim.yaml  bookie-pod.yaml  broker-pod.yaml  broker-service.yaml  docker-compose.yaml  docker-images.sh  firebase.json  pda-propiedades-command.Dockerfile  pda-propiedades-query.Dockerfile  pda-transacciones-command.Dockerfile  pda-transacciones-query.Dockerfile  pda.Dockerfile  pulsar-init-deployment.yaml  pyproject.toml  requirements.txt  zookeeper-pod.yaml
deployment/: ingress.yaml  install.sh  pda-propiedades-command.yaml  pda-propiedades-query.yaml  service.sh  transacciones-command.yaml  transacciones-query.yaml
schemas/: Untitled-1  propiedades.json  saga_log.json  transacciones.json
src/pda-propiedades-command/api/: transacciones.py
src/pda-propiedades-query/api/: transacciones.py
src/pda-transacciones-command/api/: propiedades.py  transacciones.py
src/pda-transacciones-query/api/: __init__.py  transacciones.py
src/pda/api/: __init__.py  propiedades.py  propiedades_queries.py  transacciones.py  transacciones_queries.py
src/pda_propiedades_command/api/: __init__.py  propiedades.py  propiedades_queries.py  transacciones.py  transacciones_queries.py
src/pda_propiedades_command/config/: uow.py
src/pda_propiedades_query/api/: __init__.py  propiedades_queries.py
src/pda_propiedades_query/config/: uow.py
src/pda_transacciones_command/api/: __init__.py  propiedades.py  propiedades_queries.py  transacciones.py  (+1 more)
(+166 files in other folders)
