[project]
name = "pda"
version = "1.0.0"
authors = [
  { name="Jose Garay", email="j.garay@uniandes.edu.co" },
  { name="Hawer Forero", email="h.foreror@uniandes.edu.co" },
  { name="Jael Rivera", email="ja.riverao1@uniandes.edu.co" }
]
description = "Proyecto de Propiedades de los alpes"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]